welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:17: error: not found: value getMonde
      if (posX == getMondeLargeur()-1 && posY == getMonde(Hauteur)-2) {
                                                 ^Diagonal:17: error: not found: value Hauteur
      if (posX == getMondeLargeur()-1 && posY == getMonde(Hauteur)-2) {
                                                          ^